--- a/templates/reader.html
+++ b/templates/reader.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="initial-scale=1" />
         <title>Hello, world!</title>
         <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <link rel="stylesheet" type="text/css" href="/static/reader.css" />
@@ -30,9 +31,9 @@
             <div class="line-sep"></div>
 
             <p>contact: 
-                <a href="https://github.com/tt-thoma/">tt-thoma (github)</a>,
-                <a href="https://api.discordlabs.org/user?id=550229282325266432">@tt_thoma (discord)</a>,
-                <a href="mailto:thom@tt-thoma.net">thom@tt-thoma.net (email)</a>
+                <a href="https://github.com/tt-thoma/" target="_blank">tt-thoma (github)</a>,
+                <a href="https://api.discordlabs.org/user?id=550229282325266432" target="_blank">@tt_thoma (discord)</a>,
+                <a href="mailto:thom@tt-thoma.net" target="_blank">thom@tt-thoma.net (email)</a>
             </p>
 
             <div class="line-sep-soft"></div>
