--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta name="viewport" content="initial-scale=1" />
         <title>Hello, world!</title>
-        <link rel="stylesheet" type="text/css" href="/static/style.css" />
+        <link rel="stylesheet" type="text/css" href="/static/index.css" />
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <script src="/static/main.js"></script>
     </head>
