--- a/static/reader.css
+++ b/static/reader.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Nabla&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=SN+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 
 body {
-    font-family: "SN Pro", "Roboto", "Calibri", sans-serif;
+    font-family: "Roboto Slab", "Courier New", Courier, monospace;
 
     --accent: rgb(136, 52, 233);
     --accent2: rgb(52, 115, 233);
